--- a/portfolio.html
+++ b/portfolio.html
@@ -260,7 +260,7 @@
 									<span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
 									<h6>Telemovel</h6>
 									<p>914 865 602</p>
-									<p>Chamada móvel nacional</p>
+									<p>(Chamada móvel nacional)</p>
 									
 								</div>
 							</div>
